# const-macros

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  changelogging.toml
changes/: ~const-eq-ne.fix.md  ~map.feature.md  ~none.feature.md  ~quick.feature.md
src/: lib.rs
