[package]
name = "const-macros"
version = "0.3.0"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2021"
description = "Various macros for const contexts."
documentation = "https://docs.rs/const-macros"
readme = "README.md"
repository = "https://github.com/nekitdev/const-macros"
license = "MIT"
keywords = ["const", "macro"]

[dev-dependencies.thiserror]
version = "2.0.12"
